removed background attachment:fixed; as it was causing no background image to be visible in iOS

--- a/css/style.scss
+++ b/css/style.scss
@@ -79,12 +79,16 @@
     color: #fff;
     text-align: center;
     padding: 240px 0;
+  
+    @supports (background-blend-mode: multiply) {
         background: url(../img/garmin1.png),
           radial-gradient( #1CB5E0 , #000046 );
+        background-blend-mode: multiply;
         background-repeat: no-repeat;
         background-position: center center;
         min-height: 100%;
       }
+  }
 
 //   Spotlight Products
   .section-title-one {
